Fix vertical alignment style

--- a/branding/css/susemanager-setup-wizard.less
+++ b/branding/css/susemanager-setup-wizard.less
@@ -203,9 +203,14 @@ ul.product-list {
       vertical-align: middle;
       padding: .3em;
       float: none;
+      * {
+        vertical-align: middle;
+        font-weight: normal;
+        margin: 0;
+        line-height: 2em;
+      }
       > * {
         display: inline-block;
-        vertical-align: middle;
         margin: .2em;
       }
       button, i {
